<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/main_btn_bol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/bt_message"
        app:layout_constraintEnd_toStartOf="@+id/main_btn_des"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/main_tv" />

    <Button
        android:id="@+id/main_btn_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_message1"
        app:layout_constraintBottom_toBottomOf="@+id/main_btn_bol"
        app:layout_constraintEnd_toStartOf="@+id/main_btn_con"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_btn_bol"
        app:layout_constraintTop_toTopOf="@+id/main_btn_bol"
        tools:ignore="UnknownId" />

    <Button
        android:id="@+id/main_btn_con"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_message2"
        app:layout_constraintBottom_toBottomOf="@+id/main_btn_des"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_btn_des"
        app:layout_constraintTop_toTopOf="@+id/main_btn_des" />

    <TextView
        android:id="@+id/main_tv"
        android:layout_width="225dp"
        android:layout_height="30dp"
        android:fontFamily="sans-serif"
        android:text="@string/tv_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="70dp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>